--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.commonmark</groupId>
+			<artifactId>commonmark</artifactId>
+			<version>0.18.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
