--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.show-sql = true
 
 spring.thymeleaf.cache = false
 
+# max file size - default 1MB
+spring.servlet.multipart.max-file-size=10MB
+# max request size - default 10MB
+spring.servlet.multipart.max-request-size=25MB
+
