--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Gradus is a centralised platform for students to manage their assignments, track grades and get things done. 
   It is a simple and easy to use interface designed to maximise your productivity by doing all the heavy lifting. 
   Track your grades automatically, export detailed reports and task lists.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/docs/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: "mikeliang_to"
 github_username: "yak-fumblepack"
