--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   It is a simple and easy to use interface designed to maximise your productivity by doing all the heavy lifting. 
   Track your grades automatically, export detailed reports and task lists.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://yak-fumblepack.github.io/Gradus" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://gradus-docs.netlify.app" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: "mikeliang_to"
 github_username: "yak-fumblepack"
 
